fix whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
 
 body {
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 /*===================================================================*/
@@ -201,7 +200,7 @@ body {
     width: 100%;
     display: inline-block;
     height: calc(10px+12vw);
-    margin: 0% 0% 0% 0%;
+    margin: 0% 0% -10% 0%; /* fix whitespace below footer */
 }
 .footer-text {
     font-size: calc(4px + 0.7vw);
